Tugas 4 selesai (tinggal readme)

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -12,8 +12,19 @@
 <a href="{% url 'main:create_product' %}">
   <button>+ Add Product</button>
 </a>
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+<h5>Sesi terakhir login: {{ last_login }}</h5>
 
 <hr>
+
+<a href="?filter=all">
+    <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Articles</button>
+</a> 
 
 {% if not product_list %}
 <p>Belum ada data produk pada Burhan Sigma Sport.</p>
@@ -31,7 +42,7 @@
   <br />
   {% endif %}
 
-  <p>{{ product.description|truncatewords:25 }}...</p>
+  <p>{{ product.description|truncatewords:15 }}</p>
   <p>Rp {{ product.price|floatformat:0|stringformat:"s"|slice:":-3" }}.{{ product.price|stringformat:"s"|slice:"-3:" }}</p>
 
   <p><a href="{% url 'main:show_product' product.id %}"><button>Detail</button></a></p>
