--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -13,4 +13,9 @@
 
 <p>{{ product.description }}</p>
 
+{% if product.user %}
+    <p>Author: {{ product.user.username }}</p>
+{% else %}
+    <p>Author: Anonymous</p>
+{% endif %}
 {% endblock content %}
